Try github to client

--- a/GoogleMapExample.html
+++ b/GoogleMapExample.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!This line is for Github testing purposes.>
+<!I am gonna delete this line.>
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
