--- a/GoogleMapExample.html
+++ b/GoogleMapExample.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!I am gonna delete this line.>
+<!Edit at local synchronously.>
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
