Fix the bug of missing </script> and importing google javascript api

--- a/GoogleMapExample_step.html
+++ b/GoogleMapExample_step.html
@@ -40,10 +40,10 @@
           float: none;
           width: auto;
         }
-      }
-	  
-    </style>
-   <script src="EnRouteTask_step.js"></script>
+      }	  
+    </style>    
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBj-LI45_3msjM7hqaAUl1hEj0J8fgidw&libraries=places&sensor=true"></script>
+    <script type="text/javascript" src="EnRouteTask_step.js"></script>    
   </head>
   <body>
   	<div id="panel">
@@ -59,6 +59,6 @@
         <input type="button" value="Submit" onClick="calcRoute();">
     </div>
     <div id="directions-panel"></div>  
-  	<div id = "map-canvas"/>		
-  </body>
+  	<div id = "map-canvas"/>	
+  </body>  
 </html>
